[tool.poetry]
name = "search-algo-visualizer"
version = "0.1.0"
description = ""
authors = ["Derek Marion <github.magnify953@passmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.9.3"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
